{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 24,
  "lineage": "0c482042-607a-7e73-f5d7-14d3e02b2f38",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bf597a4a33c0f889",
            "domain": "vpc",
            "id": "eipalloc-0bf597a4a33c0f889",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-16-191-75.us-east-2.compute.amazonaws.com",
            "public_ip": "3.16.191.75",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-002068ed284fb165b",
            "arn": "arn:aws:ec2:us-east-2:045330257678:instance/i-02be0dfb4380686d2",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02be0dfb4380686d2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f62c0d078286855a",
            "private_dns": "ip-10-0-2-98.us-east-2.compute.internal",
            "private_ip": "10.0.2.98",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f86a448fcac28eab",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01e514a05a0ec6f65",
            "tags": {
              "Name": "test_instance"
            },
            "tags_all": {
              "Name": "test_instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-007fb765234b680af"
            ]
          },
          "dependencies": [
            "aws_subnet.private_sub1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:045330257678:internet-gateway/igw-090311be9b362d18e",
            "id": "igw-090311be9b362d18e",
            "owner_id": "045330257678",
            "tags": {
              "Name": "igw_day1"
            },
            "tags_all": {
              "Name": "igw_day1"
            },
            "vpc_id": "vpc-086a4dffc66b26ef0"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bf597a4a33c0f889",
            "connectivity_type": "public",
            "id": "nat-05403e1a4e96f2f1a",
            "network_interface_id": "eni-0ab6461794fd74f5c",
            "private_ip": "10.0.1.185",
            "public_ip": "3.16.191.75",
            "subnet_id": "subnet-0b3a7dfdcaeb2c232",
            "tags": {
              "Name": "ngw_day1"
            },
            "tags_all": {
              "Name": "ngw_day1"
            }
          },
          "dependencies": [
            "aws_eip.main",
            "aws_subnet.public_sub1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:045330257678:route-table/rtb-0c7c787c7631e5230",
            "id": "rtb-0c7c787c7631e5230",
            "owner_id": "045330257678",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-05403e1a4e96f2f1a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private_rt"
            },
            "tags_all": {
              "Name": "private_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-086a4dffc66b26ef0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.main",
            "aws_nat_gateway.main",
            "aws_subnet.public_sub1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:045330257678:route-table/rtb-05be6b3844bf65ccd",
            "id": "rtb-05be6b3844bf65ccd",
            "owner_id": "045330257678",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-090311be9b362d18e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_rt"
            },
            "tags_all": {
              "Name": "public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-086a4dffc66b26ef0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pure",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:045330257678:route-table/rtb-00881db044c60ebab",
            "id": "rtb-00881db044c60ebab",
            "owner_id": "045330257678",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private_pure_rt"
            },
            "tags_all": {
              "Name": "private_pure_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-086a4dffc66b26ef0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a673d266c3c3c851",
            "route_table_id": "rtb-0c7c787c7631e5230",
            "subnet_id": "subnet-01e514a05a0ec6f65"
          },
          "dependencies": [
            "aws_eip.main",
            "aws_nat_gateway.main",
            "aws_route_table.private_rt",
            "aws_subnet.private_sub1",
            "aws_subnet.public_sub1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ad4d98faea830eb",
            "route_table_id": "rtb-0c7c787c7631e5230",
            "subnet_id": "subnet-093ec6ef2c88a9e01"
          },
          "dependencies": [
            "aws_eip.main",
            "aws_nat_gateway.main",
            "aws_route_table.private_rt",
            "aws_subnet.private_sub2",
            "aws_subnet.public_sub1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a1aaa4824f542d8",
            "route_table_id": "rtb-05be6b3844bf65ccd",
            "subnet_id": "subnet-0b3a7dfdcaeb2c232"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public_rt",
            "aws_subnet.public_sub1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ebfa109ddf99cd9a",
            "route_table_id": "rtb-05be6b3844bf65ccd",
            "subnet_id": "subnet-044696ce329654ba5"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public_rt",
            "aws_subnet.public_sub2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pure_association1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b986fb66beeb1897",
            "route_table_id": "rtb-00881db044c60ebab",
            "subnet_id": "subnet-0dd8d46da9febc4af"
          },
          "dependencies": [
            "aws_route_table.pure",
            "aws_subnet.private_pure_sub1",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pure_association2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd46dde45e857696",
            "route_table_id": "rtb-00881db044c60ebab",
            "subnet_id": "subnet-060f50e7f76304808"
          },
          "dependencies": [
            "aws_route_table.pure",
            "aws_subnet.private_pure_sub2",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_pure_sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:045330257678:subnet/subnet-0dd8d46da9febc4af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0dd8d46da9febc4af",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "045330257678",
            "tags": {
              "Name": "private_pure_sub1"
            },
            "tags_all": {
              "Name": "private_pure_sub1"
            },
            "vpc_id": "vpc-086a4dffc66b26ef0"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_pure_sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:045330257678:subnet/subnet-060f50e7f76304808",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-060f50e7f76304808",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "045330257678",
            "tags": {
              "Name": "private_pure_sub2"
            },
            "tags_all": {
              "Name": "private_pure_sub2"
            },
            "vpc_id": "vpc-086a4dffc66b26ef0"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:045330257678:subnet/subnet-01e514a05a0ec6f65",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-01e514a05a0ec6f65",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "045330257678",
            "tags": {
              "Name": "private_sub1"
            },
            "tags_all": {
              "Name": "private_sub1"
            },
            "vpc_id": "vpc-086a4dffc66b26ef0"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:045330257678:subnet/subnet-093ec6ef2c88a9e01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-093ec6ef2c88a9e01",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "045330257678",
            "tags": {
              "Name": "private_sub2"
            },
            "tags_all": {
              "Name": "private_sub2"
            },
            "vpc_id": "vpc-086a4dffc66b26ef0"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:045330257678:subnet/subnet-0b3a7dfdcaeb2c232",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0b3a7dfdcaeb2c232",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "045330257678",
            "tags": {
              "Name": "public_sub1"
            },
            "tags_all": {
              "Name": "public_sub1"
            },
            "vpc_id": "vpc-086a4dffc66b26ef0"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:045330257678:subnet/subnet-044696ce329654ba5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-044696ce329654ba5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "045330257678",
            "tags": {
              "Name": "public_sub2"
            },
            "tags_all": {
              "Name": "public_sub2"
            },
            "vpc_id": "vpc-086a4dffc66b26ef0"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:045330257678:vpc/vpc-086a4dffc66b26ef0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0603358b25695be39",
            "default_route_table_id": "rtb-0d45b95e2d925376b",
            "default_security_group_id": "sg-007fb765234b680af",
            "dhcp_options_id": "dopt-0c3097869e82d5955",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-086a4dffc66b26ef0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d45b95e2d925376b",
            "owner_id": "045330257678",
            "tags": {
              "Name": "vpc_A"
            },
            "tags_all": {
              "Name": "vpc_A"
            }
          }
        }
      ]
    }
  ]
}